# Fixed: console doesn't work on Firefox 2
--HG--
branch : experimental

--- a/chrome/custombuttons/content/custombuttons/editor/console1.5.css
+++ b/chrome/custombuttons/content/custombuttons/editor/console1.5.css
@@ -10,7 +10,7 @@ richlistitem[href^='chrome://custombuttons/content/button.js']{
 
 #CBConsoleBox
 {
-    -moz-binding: url(chrome://custombuttons/content/editor/cbeditor.xml#cb-error-console);
+    -moz-binding: url(chrome://custombuttons/content/editor/console.xml#cb-error-console);
 }
 
 #Console\:modeAll {
@@ -56,4 +56,35 @@ richlistitem[href^='chrome://custombuttons/content/button.js']{
 #Console\:clear:hover,
 #Console\:clear[checked="true"] {
   -moz-image-region: rect(24px 120px 48px 96px);
+}
+
+.console-rows {
+  -moz-user-focus: normal;
+}
+
+.console-row[type="error"],
+.console-row[type="warning"] {
+  -moz-binding: url("chrome://global/content/consoleBindings.xml#error");
+}
+
+.console-row[type="message"] {
+  -moz-binding: url("chrome://global/content/consoleBindings.xml#message");
+}
+
+.console-msg-text,
+.console-error-msg {
+  white-space: pre-wrap;
+}
+
+.console-error-source {
+  -moz-binding: url("chrome://global/content/consoleBindings.xml#console-error-source");
+}
+
+.console-dots {
+  width: 1px;
+}
+
+/* If line number is 0, hide the line number section */
+.lineNumberRow[line="0"] {
+  display: none;
 }
